@@ -34,7 +34,7 @@
 #include "dm_private.h"
 
 #include "dm-Null.h"
-#include "solid.h"
+#include "rt/solid.h"
 
 extern dm *plot_open(Tcl_Interp *interp, int argc, const char *argv[]);
 extern dm *ps_open(Tcl_Interp *interp, int argc, const char *argv[]);
